fix(rest-api): Provide correct OpenAPI specs for listing deprecations /w linting (#130)
