# specs/api-specs.json
@@ -17,9 +17,78 @@
         "http"
     ],
     "paths": {
+        "/api/v1/deprecations": {
+            "get": {
+                "tags": [
+                    "deprecations"
+                ],
+                "summary": "Get all deprecations",
+                "description": "Provides capability to browse all deprecations",
+                "operationId": "GetDeprecations",
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "in": "query",
+                        "name": "filters.status",
+                        "description": "Filter to reduce deprecation notices by a given status.",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "filters.year",
+                        "description": "Filter to reduce deprecation notices by the year of the deprecation.",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "filters.service",
+                        "description": "Filter to reduce deprecation notices for a given Azure service.",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "filters.impactType",
+                        "description": "Filter to reduce deprecation notices by a given impact type.",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "filters.cloud",
+                        "description": "Filter to reduce deprecation notices for a given cloud.",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "pagination.offset",
+                        "description": "Specifies the amount of pages to skip.",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "pagination.limit",
+                        "description": "Specifies the amount of entries in the page.",
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Payload of DeprecationNoticesResponse",
+                        "schema": {
+                            "$ref": "#/definitions/deprecationNoticesResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/deprecations/{id}": {
             "get": {
+                "tags": [
+                    "deprecations"
+                ],
                 "summary": "Get deprecation details",
+                "description": "Provides capability to get detailed about a specific deprecation",
                 "operationId": "GetDeprecation",
                 "produces": [
                     "application/json"
@@ -38,35 +107,6 @@
                         "description": "Payload of DeprecationInfo",
                         "schema": {
                             "$ref": "#/definitions/deprecationInfo"
-                        }
-                    }
-                }
-            }
-        },
-        "/api/v1/deprecations": {
-            "get": {
-                "summary": "Get all deprecations",
-                "operationId": "GetDeprecations",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "parameters": [
-                    {
-                        "in": "body",
-                        "name": "body",
-                        "schema": {
-                            "$ref": "#/definitions/deprecationsRequestModel"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Payload of DeprecationNoticesResponse",
-                        "schema": {
-                            "$ref": "#/definitions/deprecationNoticesResponse"
                         }
                     }
                 }
@@ -139,205 +179,6 @@
                     "items": {
                         "$ref": "#/definitions/deprecationInfo"
                     }
-                }
-            }
-        },
-        "deprecationsRequestModel": {
-            "type": "object",
-            "properties": {
-                "filters": {
-                    "$ref": "#/definitions/filterNoticesRequest"
-                },
-                "pagination": {
-                    "$ref": "#/definitions/paginationNoticesRequest"
-                }
-            }
-        },
-        "filterNoticesRequest": {
-            "type": "object",
-            "properties": {
-                "status": {
-                    "format": "int32",
-                    "default": 0,
-                    "enum": [
-                        0,
-                        1
-                    ],
-                    "type": "integer"
-                },
-                "year": {
-                    "format": "int32",
-                    "type": "integer"
-                },
-                "service": {
-                    "default": "ActiveDirectory",
-                    "enum": [
-                        "ActiveDirectory",
-                        "Advisor",
-                        "All",
-                        "AnalysisService",
-                        "AnomalyDetector",
-                        "ApiApps",
-                        "ApiForFhir",
-                        "ApiManagement",
-                        "AppConfiguration",
-                        "ApplicationGateway",
-                        "ApplicationInsights",
-                        "AppService",
-                        "Arc",
-                        "Automation",
-                        "Backup",
-                        "Bastion",
-                        "Batch",
-                        "BlockchainService",
-                        "BlockchainTokens",
-                        "BlockchainWorkbench",
-                        "Blueprints",
-                        "BotService",
-                        "CacheForRedis",
-                        "Cdn",
-                        "CloudServices",
-                        "CognitiveSearch",
-                        "CognitiveServices",
-                        "ContainerApps",
-                        "ContainerInstances",
-                        "ContainerRegistry",
-                        "CosmosDb",
-                        "CostManagement",
-                        "CycleCloud",
-                        "DatabaseForMariaDB",
-                        "DatabaseForMySQL",
-                        "DatabaseForPostgreSQL",
-                        "DatabaseMigrationService",
-                        "Databricks",
-                        "DataFactory",
-                        "DataLakeAnalytics",
-                        "DataLakeStorage",
-                        "DataShare",
-                        "DataScience",
-                        "DdosProtection",
-                        "DedicatedHost",
-                        "DevOps",
-                        "DevSpaces",
-                        "DevTestLabs",
-                        "DigitalTwins",
-                        "Dns",
-                        "EventGrid",
-                        "EventHubs",
-                        "ExpressRoute",
-                        "Firewall",
-                        "FirewallManager",
-                        "FormRecognizer",
-                        "FrontDoor",
-                        "Functions",
-                        "Genomics",
-                        "HDInsight",
-                        "InformationProtection",
-                        "InternetAnalyzer",
-                        "IotCentral",
-                        "IoTEdge",
-                        "IotHub",
-                        "IotHubDps",
-                        "KubernetesService",
-                        "LabServices",
-                        "Lighthouse",
-                        "LoadBalancer",
-                        "LogAnalytics",
-                        "LogicApps",
-                        "MachineLearning",
-                        "ManagedApplications",
-                        "Maps",
-                        "MediaServices",
-                        "Migrate",
-                        "MixedReality",
-                        "MobileApps",
-                        "Monitor",
-                        "NetworkWatcher",
-                        "NotificationHubs",
-                        "Other",
-                        "Policy",
-                        "Portal",
-                        "PowerBI",
-                        "PrivateLink",
-                        "RedHatOpenshift",
-                        "Relay",
-                        "RemoteRendering",
-                        "ReservedIp",
-                        "ResourceGraph",
-                        "ResourceManager",
-                        "SecurityCenter",
-                        "Sentinel",
-                        "ServiceBus",
-                        "ServiceFabric",
-                        "ServiceFabricMesh",
-                        "ServiceHealth",
-                        "SignalR",
-                        "SiteRecovery",
-                        "SpatialAnchors",
-                        "Sphere",
-                        "SpringCloud",
-                        "SqlDatabase",
-                        "SqlEdge",
-                        "SqlManagedInstance",
-                        "Stack",
-                        "Storage",
-                        "StoreSimple",
-                        "StreamAnalytics",
-                        "SynapseAnalytics",
-                        "TimeSeriesInsights",
-                        "TrafficManager",
-                        "VideoIndexer",
-                        "VirtualMachine",
-                        "VirtualMachineScaleSets",
-                        "VirtualNetwork",
-                        "VisualStudioCodespaces",
-                        "VMwareSolutions",
-                        "VpnGateway",
-                        "WebApp",
-                        "WebApplicationGateway",
-                        "WindowsVirtualDesktop"
-                    ],
-                    "type": "string"
-                },
-                "impactType": {
-                    "default": "Unknown",
-                    "enum": [
-                        "Unknown",
-                        "None",
-                        "Limited",
-                        "UpgradeRequired",
-                        "MigrationRequired",
-                        "ShutdownWithoutAlternative"
-                    ],
-                    "type": "string"
-                },
-                "cloud": {
-                    "default": "Unknown",
-                    "enum": [
-                        "Unknown",
-                        "Public",
-                        "Sovereign",
-                        "China",
-                        "Government",
-                        "German"
-                    ],
-                    "type": "string"
-                },
-                "area": {
-                    "default": "Unknown",
-                    "enum": [
-                        "Unknown",
-                        "Sdk",
-                        "Certification",
-                        "Tooling",
-                        "Security",
-                        "ApiEndpoint",
-                        "Feature",
-                        "ServiceRuntime",
-                        "Region",
-                        "Sku"
-                    ],
-                    "type": "string"
                 }
             }
         },
@@ -533,23 +374,6 @@
                     "items": {
                         "type": "string"
                     }
-                }
-            }
-        },
-        "paginationNoticesRequest": {
-            "type": "object",
-            "properties": {
-                "offset": {
-                    "format": "int32",
-                    "maximum": 2147483647,
-                    "minimum": 0,
-                    "type": "integer"
-                },
-                "limit": {
-                    "format": "int32",
-                    "maximum": 500,
-                    "minimum": 1,
-                    "type": "integer"
                 }
             }
         },
